fix achiefments link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h2>Halo MCC Achievements</h2>
           <p>An achievement browser for Halo: Master Chief Collection.</p>
           <p>There are 600 achievements in this game and no way to sort or filter them so I started writing this for some PHP practice. The API requests are quite slow though.</p>
-          <p><a class="btn btn-default" href="http://ajb.im/achiefments?game=H1&gamertag=Rouge+Sheep" role="button">Show me &raquo;</a></p>
+          <p><a class="btn btn-default" href="achiefments?game=H1&gamertag=Rouge+Sheep" role="button">Show me &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>GitHub</h2>
