--- a/pages/thank-you-campo-santo.html
+++ b/pages/thank-you-campo-santo.html
@@ -51,9 +51,10 @@
     </div>
 
       <hr>
-
       <footer>
-        <p>Andy Burne 2017</p>
+        <div class="container">
+          <p>Andy Burne 2017</p>
+        </div>
       </footer>
     </div> <!-- /container -->
 
