footer panel thing

--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
       </div>
     </div>
 
-      <hr>
-
-      <footer>
+      <footer class="panel-footer">
         <div class="container">
           <p>Andy Burne 2017</p>
         </div>
