--- a/pages/nova-launcher-quick-actions.html
+++ b/pages/nova-launcher-quick-actions.html
@@ -43,8 +43,7 @@
       <h2>Coming Soon!</h2>
     </div>
 
-      <hr>
-      <footer>
+      <footer class="panel-footer">
         <div class="container">
           <p>Andy Burne 2017</p>
         </div>
