--- a/pages/thank-you-campo-santo.html
+++ b/pages/thank-you-campo-santo.html
@@ -50,8 +50,7 @@
       </blockquote>
     </div>
 
-      <hr>
-      <footer>
+      <footer class="panel-footer">
         <div class="container">
           <p>Andy Burne 2017</p>
         </div>
