--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Andy Burne</h1>
-        <p>Linux and technology enthusiast.</p>
+        <p>Slightly incompetent sysadmin.</p>
       </div>
     </div>
 
