--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Andy Burne</h1>
-        <p>Slightly incompetent sysadmin.</p>
+        <p>Slightly Incompetent Sysadmin.</p>
       </div>
     </div>
 
@@ -48,15 +48,11 @@
           <p>My GitHub account. I try to remember to put scripts, snippets and little projects or tools I write here incase I need them again. You never know, someone else may find them useful.</p>
           <p><a class="btn btn-default" href="https://github.com/rougesheep?tab=repositories" role="button">Show me &raquo;</a></p>
         </div>
-      </div>
-      <div class="row">
         <div class="col-md-4">
           <h2>Thank You Campo Santo</h2>
           <p>A little thank you letter I sent to Firewatch developer Campo Santo</p>
           <p><a class="btn btn-default" href="pages/thank-you-campo-santo.html" role="button">Show me &raquo;</a></p>
         </div>
-        <div class="col-md-4"></div>
-        <div class="col-md-4"></div>
       </div>
     </div>
 
